--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -19,7 +19,7 @@ limitations under the License.
 <div class="amplification-chart-state-active results-charts">
   <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment">
     <div class="content row">
-      <div class="chart-section col-xs-6">
+      <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6">
         <div>
           <div class="curve-header">
             <div class="row">
@@ -180,7 +180,7 @@ limitations under the License.
           <amplification-well-switch ng-model="wellButtons" color-by="color_by" chart-type="amplification"></amplification-well-switch>
         </div>
       </div>
-      <div class="table-container col-xs-6" full-height offset="37+50" style="padding-right: 0; padding-left: 0;">
+      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" full-height offset="37+50" style="padding-right: 0; padding-left: 0;">
         <table>
           <tbody>
             <tr>
