--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -168,7 +168,14 @@ limitations under the License.
                       <span ng-if="color_by==='target'" class="dot" ng-attr-style="background-color: {{COLORS[$index]}}"></span>
                     </td>
                     <td>{{target}}</td>
-                    <td class="td-tik" ng-click="targetClick($index)"><span ng-show="!targetsSetHided[$index]"><img src="/images/tik.png"></span></td>
+                    <td class="td-tik" ng-click="targetClick($index)">
+                      <span ng-show="!targetsSetHided[$index]">
+                        <img src="/images/target_on.svg">
+                      </span>
+                      <span ng-show="targetsSetHided[$index]">
+                          <img src="/images/target_off.svg">
+                        </span>
+                      </td>
                   </tr>
                 </table>
               </div>
@@ -180,7 +187,7 @@ limitations under the License.
           <amplification-well-switch ng-model="wellButtons" color-by="color_by" chart-type="amplification"></amplification-well-switch>
         </div>
       </div>
-      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" full-height offset="37+50" style="padding-right: 0; padding-left: 0;">
+      <div class="table-container col-lg-4 col-md-4 col-sm-6 col-xs-6" style="padding-right: 0; padding-left: 0;">
         <table>
           <tbody>
             <tr>
@@ -194,7 +201,10 @@ limitations under the License.
                 <span ng-if="is_dual_channel">Cq Ch1</span>
                 <span ng-if="!is_dual_channel">Cq</span>
               </th>
-              <th class="B1" ng-class="{'channel-2': color_by === 'channel'}" ng-if="is_dual_channel">Cq Ch2</th>
+              <th class="B1" ng-class="{'channel-2': color_by === 'channel'}" >
+                <span ng-if="is_dual_channel" >Cq Ch2</span>
+                <span ng-if="!is_dual_channel" >Cq M</span>
+              </th>
               <th class="B1">Qty</th>
               <th class="B1">Qty M</th>
             </tr>
@@ -242,7 +252,7 @@ limitations under the License.
                 </span>
               </td>
               <td class="B1">
-                <span class="width1" ng-if="is_dual_channel == true">
+                <span class="width1" ng-if="is_dual_channel">
                   <span ng-show="wellButtons['well_'+i].ct[1] > 0">
                     {{(wellButtons['well_'+i].ct[1]) | round:2}}
                   </span>
@@ -250,12 +260,15 @@ limitations under the License.
                     <span class="dummy-placeholder"></span>
                   </span>
                 </span>
-                <span class="width1" ng-if="is_dual_channel == false">
+                <span class="width1" ng-if="!is_dual_channel">
                   <span class="dummy-placeholder"></span>
                 </span>
               </td>
               <td class="B1" >
-              </td>
+                  <span class="width1">
+                      <span class="dummy-placeholder"></span>
+                    </span>
+                  </td>
               <td class="B1" >
                 <span class="width1">
                   <span class="dummy-placeholder"></span>
