--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -265,14 +265,15 @@
   .curve-body {
     background-color: #eee;
     padding: 20px;
-    height: 610px;
+    // min-height: 600px;
+    // height: 610px;
     .curve-plot {
       background-color: #fff;
       padding: 10px;
       display: inline-block;
       width: 85%;
       float: left;
-      height: 100%;
+      // height: 100%;
     }
     .additional-info {
       position: relative;
@@ -520,7 +521,7 @@
     top: 0px;
     bottom: 50px;
     right: 0px;
-    height: 94%;
+    // height: 94%;
 
 		.sample-span{
 			font-family: 'dinot-Regular';
