--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -135,20 +135,20 @@ limitations under the License.
                 <div>
                   <table class="parameters-table">
                     <tr>
-                      <td>Effic:</td>
-                      <td>99.9%</td>
+                      <td>Cycle:</td>
+                      <td></td>
                     </tr>
                     <tr>
-                      <td>R2:</td>
-                      <td>.998</td>
+                      <td>RFU:</td>
+                      <td></td>
                     </tr>
                     <tr>
-                      <td>Slop:</td>
-                      <td>3.325%</td>
+                      <td>dF/dc:</td>
+                      <td></td>
                     </tr>
                     <tr>
-                      <td>Y-Int:</td>
-                      <td>26.474%</td>
+                      <td>D2F/dc2:</td>
+                      <td></td>
                     </tr>
                   </table>
                 </div>
