--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -32,7 +32,7 @@ limitations under the License.
               </div>
               <div class="col-lg-8 col-md-7 col-sm-7 col-xs-7 ampli-toggles">
                 <div class="row">
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
+                  <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 plot-options">
                     <!-- <div class="subheader-switches SH">
                       <div class="item-switch">
                         <label>Baseline Sub.</label>
@@ -51,7 +51,7 @@ limitations under the License.
                       </div>
                     </div> -->
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
+                  <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 plot-options">
                     <ul>
                       <li>
                         <span>Standard</span>
@@ -82,7 +82,7 @@ limitations under the License.
                       </form>
                     </div> -->
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 plot-options">
+                  <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 plot-options">
                     <div class="plot-option">
                       <p>Color by</p>
                       <form role="form" class="form-horizontal" name="colorBy" novalidate>
@@ -94,9 +94,9 @@ limitations under the License.
                                 <img class="arrow-down" src="/images/arrow-down.png">
                               </button>
                               <div id="colorByList" class="dropdown-content">
-                                <a href="" ng-click="color_by='sample'" value="abc">Sample</a>
+                                <a href="" ng-click="color_by='sample'" value="abc">Target</a>
                                 <a href="" ng-click="color_by='target'" value="abc">Target</a>
-                                <a href="" ng-click="color_by='well'" value="abc">Well</a>
+                                <a href="" ng-click="color_by='well'" value="abc">Target</a>
                               </div>
                             </div>
                           </div>
