--- a/frontend/stylesheets/amplification-chart.css.scss
+++ b/frontend/stylesheets/amplification-chart.css.scss
@@ -321,6 +321,11 @@
         overflow: auto;
         .targets-table {
           width: 100%;
+          td {
+            font-family: "Dinot-Regular";
+            font-size: 16px;
+            line-height: 20px;
+          }
           .td-tik {
             min-width: 30px;
             text-align: right;
@@ -341,6 +346,7 @@
     margin-right: 0;
     .plot-options {
       text-align: right;
+      padding-right: 30px;
       .plot-option {
         display: inline-block;
         text-align: left;
