--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -147,7 +147,7 @@ limitations under the License.
                       <td></td>
                     </tr>
                     <tr>
-                      <td>D2F/dc2:</td>
+                      <td>D<sup>2</sup>/dc<sup>2</sup>:</td>
                       <td></td>
                     </tr>
                   </table>
@@ -157,7 +157,7 @@ limitations under the License.
                 Channel:
               </div>
               <br><br>
-              <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':targetGridTop}" >
+              <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':targetGridTop,'display':'inline-block'}" >
                 <table class="targets-table">
                   <tr ng-repeat="target in targetsSet">
                     <td>
