--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -170,7 +170,7 @@ limitations under the License.
                 B4, Sample A
               </div>
               <br><br>
-              <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':targetGridTop}" >
+              <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':targetGridTop,'display':'inline-block'}" >
                 <table class="targets-table">
                   <tr ng-repeat="target in targetsSet">
                     <td>
