standard@amplification ui font size fixed

--- a/frontend/javascripts/app/views/directives/amplification-well-switch.html
+++ b/frontend/javascripts/app/views/directives/amplification-well-switch.html
@@ -20,13 +20,13 @@
   <table>
     <tbody>
       <tr>
-        <th ng-mousedown="dragStart($event, 'corner', 0)" ng-style="{width: row_header_width + 'px'}" class="col-header"></th>
-        <th ng-mousedown="dragStart($event, 'column', col.index)" ng-mouseup="dragStop($event, 'column', col.index)" ng-mousemove="dragged($event, 'column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header" ng-class="{dragged: col.selected}">
+        <th style="font-size: 9px; font-weight: normal" ng-mousedown="dragStart($event, 'corner', 0)" ng-style="{width: row_header_width + 'px'}" class="col-header"></th>
+        <th style="font-size: 9px; font-weight: normal" ng-mousedown="dragStart($event, 'column', col.index)" ng-mouseup="dragStop($event, 'column', col.index)" ng-mousemove="dragged($event, 'column', col.index)" ng-repeat="col in columns" ng-style="{width: getCellWidth() + 'px'}" class="col-header" ng-class="{dragged: col.selected}">
           {{col.index + 1}}
         </th>
       </tr>
       <tr ng-repeat="row in rows">
-        <td class="row-header" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event, 'row', row.index)" ng-class="{dragged: row.selected}">
+        <td style="font-size: 9px; font-weight: normal" class="row-header" ng-mousedown="dragStart($event, 'row', row.index)" ng-mousemove="dragged($event, 'row', row.index)" ng-mouseup="dragStop($event, 'row', row.index)" ng-class="{dragged: row.selected}">
           {{ row.index + 1 }}
         </td>
         <td ng-repeat="col in columns" class="well-switch" ng-init="i = (row.index * columns.length) + col.index; well = wells['well_' + i];" ng-mousedown="dragStart($event, 'well', i)" ng-mousemove="dragged($event, 'well', i)" ng-mouseup="dragStop($event, 'well', i)" ng-class="{selected: well.selected, active: well.active}" ng-style="getWellStyle(row, col, well, i)">
