--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -207,11 +207,11 @@ limitations under the License.
               <th class="B2">Type</th>
               <th class="B2">Target</th>
               <th class="B2" ng-class="{'channel-1': color_by === 'channel'}">
-                <span ng-if="is_dual_channel">Cq Ch1</span>
-                <span ng-if="!is_dual_channel">Cq</span>
+                <span ng-if="is_dual_channel">Cq</span>
+                <span ng-if="!is_dual_channel">Cq M</span>
               </th>
               <th class="B2" ng-class="{'channel-2': color_by === 'channel'}" >
-                <span ng-if="is_dual_channel" >Cq Ch2</span>
+                <span ng-if="is_dual_channel" >Cq</span>
                 <span ng-if="!is_dual_channel" >Cq M</span>
               </th>
               <th class="B2">Qty</th>
