standard curve target panel issue fixed

--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -171,6 +171,7 @@ limitations under the License.
               </div>
               <br><br>
               <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':targetGridTop,'display':'inline-block'}" >
+                <!-- <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':442px,'display':'inline-block'}" > -->
                 <table class="targets-table">
                   <tr ng-repeat="target in targetsSet">
                     <td>
