--- a/frontend/javascripts/app/views/experiment/amplification-chart.html
+++ b/frontend/javascripts/app/views/experiment/amplification-chart.html
@@ -113,7 +113,7 @@ limitations under the License.
                   <h2 class="H2">Loading Data <ellipsis-animated></ellipsis-animated></h2>
                   <p class="B2">May take a minute</p>
                 </div>
-                <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
+                <amplification-chart data="amplification_data" config="chartConfig" zoom="ampli_zoom" on-zoom="onZoom" on-select-line="onSelectLine" on-unselect-line="onUnselectLine" on-update-properties="onUpdateProperties" scroll="ampli_scroll.value" show="showAmpliChart"></amplification-chart>
                 <table>
                   <tr>
                     <td><button class="button zoom-button" ng-click="zoomIn()">+</button></td>
@@ -129,32 +129,35 @@ limitations under the License.
 
             <div class="additional-info">
               <div class="parameters">
-                <div class="header">
-                  Target 01
+                <div class="header" ng-style="bgcolor_target">
+                  Target: {{label_target}}
                 </div>
                 <div>
                   <table class="parameters-table">
                     <tr>
                       <td>Cycle:</td>
-                      <td></td>
+                      <td>{{label_cycle}}</td>
                     </tr>
                     <tr>
                       <td>RFU:</td>
-                      <td></td>
+                      <td>{{label_RFU}}</td>
                     </tr>
                     <tr>
                       <td>dF/dc:</td>
-                      <td></td>
+                      <td>{{label_dF_dC}}</td>
                     </tr>
                     <tr>
                       <td>D<sup>2</sup>/dc<sup>2</sup>:</td>
-                      <td></td>
+                      <td>{{label_D2_dc2}}</td>
                     </tr>
                   </table>
                 </div>
               </div>
               <div class="info">
-                Channel:
+                Channel: {{index_channel + 1}}
+              </div>
+              <div class="info1">
+                {{label_well}}{{label_sample ? ", " : ""}}{{label_sample}}
               </div>
               <br><br>
               <div class="targets-set" ng-show="targetsSet.length" ng-style="{'top':targetGridTop,'display':'inline-block'}" >
