--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -17,7 +17,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 -->
 <div class="amplification-chart-state-active results-charts">
-  <div class="page-layout" ng-controller="AmplificationChartCtrl" ng-show="experiment">
+  <div class="page-layout" ng-controller="StandardCurveChartCtrl" ng-show="experiment">
     <div class="content row">
       <div class="chart-section col-lg-8 col-md-8 col-sm-6 col-xs-6">
         <div>
