--- a/frontend/javascripts/app/views/experiment/standard-curve.html
+++ b/frontend/javascripts/app/views/experiment/standard-curve.html
@@ -209,10 +209,10 @@ limitations under the License.
               <th class="B2">Target</th>
               <th class="B2" ng-class="{'channel-1': color_by === 'channel'}">
                 <span ng-if="is_dual_channel">Cq</span>
-                <span ng-if="!is_dual_channel">Cq M</span>
+                <span ng-if="!is_dual_channel">Cq</span>
               </th>
               <th class="B2" ng-class="{'channel-2': color_by === 'channel'}" >
-                <span ng-if="is_dual_channel" >Cq</span>
+                <span ng-if="is_dual_channel" >Cq M</span>
                 <span ng-if="!is_dual_channel" >Cq M</span>
               </th>
               <th class="B2">Qty</th>
